--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
-MINH CHINH Hello World
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>PHAN QUOC KHOA</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css" media="all">
+</head>
+<body>
+<div id="wrapper">
+    <header>
+        <div class="avatar">
+            <img src="assets/images/xxx.jpg" alt="Avatar" width="218" height="300">
+        </div>
+        <div class="info">
+            <p class="sub">Hello, I'm...</p>
+            <h1 class="title">PHAN QUOC KHOA</h1>
+            <p class="work">Front-end Developer</p>
+            <div class="detail">
+                <div class="aboutme">
+                    <h5 class="title">About me</h5>
+                    <ul>
+                        <li>Name: Phan Quoc Khoa</li>
+                        <li>Date of birth: 23/01/xxxx</li>
+                        <li>Gender: Male</li>
+                    </ul>
+
+                </div>
+                <div class="contact">
+                    <h5 class="title">Contact info</h5>
+                    <ul>
+                        <li>Address: Thanh Xuan, Ha Noi, Vietnam.</li>
+                        <li>Tel: <a href="tel:xxxxxxxxx">097 xxx xxx</a></li>
+                        <li>Mail: <a href="mailto:xxxxxx@gmail.com">xxxxxx@gmail.com</a></li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="summary">
+            Front-end Developer with 4+ years of experience developing, and managing complex WordPress themes and internal frameworks. Specializes in HTML/CSS, Javascript, jQuery, responsive design and improve UX.
+        </section>
+        <section class="skills">
+            <h3 class="title">Key Skills</h3>
+            <ul>
+                <li>Expert in HTML/CSS, JavaScript, jQuery, UX and improve website speed.</li>
+                <li>Expert in WordPress themes.</li>
+                <li>Knowledge PHP/SQL, SASS, LESS, Git, Gulp, ReactJS.</li>
+                <li>Adobe Photoshop, Zeplin, Sketch, FileZilla, Bitbucket.</li>
+            </ul>
+        </section>
+        <section class="experience">
+            <h3 class="title">experience</h3>
+            <ul>
+                <li>4+ years developed WordPress theme/plugin. And 2 years manage Projects and Development team (3-5 members).</li>
+                <li>Created custom starter-theme, WordPress theme build flow and components for internal framework.</li>
+                <li>Developed front-end for 10+ WordPress themes using HTML/HTML5, CSS/CSS3, AJAX, Backbone, javascript and jQuery.</li>
+                <li>Improve UI/UX, optimize speed for WordPress themes.</li>
+                <li>Using Linux command line and FTP (FileZilla) for deploy websites.</li>
+            </ul>
+        </section>
+        <section class="education">
+            <h3 class="title">Education History</h3>
+            <ul>
+                <li><strong>2010 - 2013:</strong> Thanglong-Aptech
+                </li>
+                <li><strong>2007 - 2010:</strong> THPT Chiem Hoa (Chiem Hoa, Tuyen Quang).
+                </li>
+            </ul>
+        </section>
+        <section class="history">
+            <h3 class="title">Employment History</h3>
+            <ul>
+                <li><strong>11/2015 - now:</strong> WordPress front-end at Foobla Vietnam.
+                    <ul>
+                        <li>
+                            <strong>Detail:</strong>
+                            <ul>
+                                <li>Manage projects and members on development team (3-5 members).</li>
+                                <li>Developed WordPress theme fully functional responsive prototypes based on Business Requirements using HTML/HTML5, CSS3, JavaScript and JQuery.</li>
+                            </ul>
+                        </li>
+                        <li><strong>Position:</strong> Team leader</li>
+                    </ul>
+                </li>
+                <li><strong>5/2014 - 10/2015:</strong> WordPress front-end at Beautiful-templates.
+                    <ul>
+                        <li>
+                            <strong>Detail:</strong> Developed WordPress theme fully functional responsive prototypes based on Business Requirements using HTML/HTML5, CSS3, JavaScript and JQuery.
+                        </li>
+                        <li><strong>Position:</strong> Team member</li>
+                    </ul>
+                </li>
+                <li><strong>2013 - 4/2014:</strong> Freelancer at Home
+                    <ul>
+                        <li>
+                            <strong>Detail:</strong> Developed WordPress themes.
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <i class="ion-code"></i> by <a href="">Khoapq</a> - <a href="tel:xxxxxx">xxxxxx</a>
+    </footer>
+</div>
+</body>
+</html>
