--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <div id="wrapper">
     <header>
         <div class="avatar">
-            <img src="assets/images/xxx.jpg" alt="Avatar" width="218" height="300">
+            <img src="assets/avatar.jpg" alt="Avatar" width="218" height="300">
         </div>
         <div class="info">
             <p class="sub">Hello, I'm...</p>
-            <h1 class="title">PHAN QUOC KHOA</h1>
+            <h1 class="title">Tran Minh Chinh</h1>
             <p class="work">Front-end Developer</p>
             <div class="detail">
                 <div class="aboutme">
                     <h5 class="title">About me</h5>
                     <ul>
-                        <li>Name: Phan Quoc Khoa</li>
-                        <li>Date of birth: 23/01/xxxx</li>
+                        <li>Name: Tran Minh Chinh</li>
+                        <li>Date of birth: 02/03/1991</li>
                         <li>Gender: Male</li>
                     </ul>
 
@@ -33,9 +33,9 @@
                 <div class="contact">
                     <h5 class="title">Contact info</h5>
                     <ul>
-                        <li>Address: Thanh Xuan, Ha Noi, Vietnam.</li>
-                        <li>Tel: <a href="tel:xxxxxxxxx">097 xxx xxx</a></li>
-                        <li>Mail: <a href="mailto:xxxxxx@gmail.com">xxxxxx@gmail.com</a></li>
+                        <li>Address: Yen Nghia, Ha Dong, Ha Noi, Vietnam.</li>
+                        <li>Tel: <a href="tel:0356988935">0356988935</a></li>
+                        <li>Mail: <a href="mailto:tranminhchinh.ksb@gmail.com">tranminhchinh.ksb@gmail.com</a></li>
                     </ul>
 
                 </div>
