--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PHAN QUOC KHOA</title>
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <title>TRAN MINH CHINH</title>
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles.css" media="all">
@@ -14,7 +14,7 @@
 <div id="wrapper">
     <header>
         <div class="avatar">
-            <img src="assets/avatar.jpg" alt="Avatar" width="218" height="300">
+            <img src="assets/avatar.jpg" alt="Avatar">
         </div>
         <div class="info">
             <p class="sub">Hello, I'm...</p>
@@ -44,23 +44,22 @@
     </header>
     <main>
         <section class="summary">
-            Front-end Developer with 4+ years of experience developing, and managing complex WordPress themes and internal frameworks. Specializes in HTML/CSS, Javascript, jQuery, responsive design and improve UX.
+            Front-end Developer with 4+ years of experience developing, and managing complex WordPress themes and internal frameworks. <br/>Specializes in HTML/CSS, Javascript, responsive design and improve UX.
         </section>
         <section class="skills">
             <h3 class="title">Key Skills</h3>
             <ul>
-                <li>Expert in HTML/CSS, JavaScript, jQuery, UX and improve website speed.</li>
-                <li>Expert in WordPress themes.</li>
-                <li>Knowledge PHP/SQL, SASS, LESS, Git, Gulp, ReactJS.</li>
-                <li>Adobe Photoshop, Zeplin, Sketch, FileZilla, Bitbucket.</li>
+                <li>Expert in HTML/CSS, JavaScript, PHP/mySQL, LESS, UX and improve website speed.</li>
+                <li>Expert in WordPress theme and plugin.</li>
+                <li>Knowledge Git, SVN, Photoshop, FileZilla, Bitbucket.</li>
             </ul>
         </section>
         <section class="experience">
             <h3 class="title">experience</h3>
             <ul>
-                <li>4+ years developed WordPress theme/plugin. And 2 years manage Projects and Development team (3-5 members).</li>
+                <li>4+ years developed WordPress theme/plugin.</li>
                 <li>Created custom starter-theme, WordPress theme build flow and components for internal framework.</li>
-                <li>Developed front-end for 10+ WordPress themes using HTML/HTML5, CSS/CSS3, AJAX, Backbone, javascript and jQuery.</li>
+                <li>Developed front-end for 30+ WordPress themes using HTML/HTML5, CSS/CSS3, JavaScript (AJAX, Backbone, jQuery, jQuery UI).</li>
                 <li>Improve UI/UX, optimize speed for WordPress themes.</li>
                 <li>Using Linux command line and FTP (FileZilla) for deploy websites.</li>
             </ul>
@@ -68,39 +67,67 @@
         <section class="education">
             <h3 class="title">Education History</h3>
             <ul>
-                <li><strong>2010 - 2013:</strong> Thanglong-Aptech
+                <li><strong>2019 - 2014:</strong> Hanoi University of Science and Technology.
                 </li>
-                <li><strong>2007 - 2010:</strong> THPT Chiem Hoa (Chiem Hoa, Tuyen Quang).
+                <li><strong>2006 - 2009:</strong> THPT Kim Son B (Kim Son, Ninh Binh).
                 </li>
             </ul>
         </section>
         <section class="history">
             <h3 class="title">Employment History</h3>
             <ul>
-                <li><strong>11/2015 - now:</strong> WordPress front-end at Foobla Vietnam.
+                <li>
+                    <strong>2018 - Now:</strong> Develop WordPress (Theme and Plugin) at KendyTheme Team & Freelancer at home.
                     <ul>
                         <li>
                             <strong>Detail:</strong>
                             <ul>
-                                <li>Manage projects and members on development team (3-5 members).</li>
+                                <li>Convert HTML from PSDf files.</li>
+                                <li>Developed WordPress theme fully functional responsive prototypes based on Business Requirements using HTML/HTML5, CSS3, LESS, jQuery.</li>
+                                <li>Support for customers (Fix bug, improve product, upgrade version).</li>
+                                <li>Manage Ubuntu VPS.</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>Position:</strong> Founder KendyTheme Team.
+                        </li>
+                    </ul>
+                </li>
+                <li><strong>2018: </strong> WordPress back-end at Foobla Vietnam.
+                    <ul>
+                        <li>
+                            <strong>Detail:</strong>
+                            <ul>
+                                <li>Develop WordPress Plugin use PHP, HTML, Javascript (jQuery, AJAX)</li>
+                                <li>Support our customers: Fix bug, install, etc.</li>
+                            </ul>
+                        </li>
+                        <li><strong>Position:</strong> Team Member</li>
+                    </ul>
+                </li>
+                <li><strong>2015-2018:</strong> WordPress front-end and back-end at Wiloke Team.
+                    <ul>
+                        <li>
+                            <strong>Detail:</strong>
+                            <ul>
+                                <li>Use Javascript (jQuery, AJAX, Backbone) to create Page Builder, jQuery plugins.</li>
                                 <li>Developed WordPress theme fully functional responsive prototypes based on Business Requirements using HTML/HTML5, CSS3, JavaScript and JQuery.</li>
                             </ul>
                         </li>
-                        <li><strong>Position:</strong> Team leader</li>
+                        <li><strong>Position:</strong> Team Member.</li>
                     </ul>
                 </li>
-                <li><strong>5/2014 - 10/2015:</strong> WordPress front-end at Beautiful-templates.
+                <li>
+                    <strong>2014-2015:</strong> Javascript Developer at MegaDrupal.
                     <ul>
                         <li>
-                            <strong>Detail:</strong> Developed WordPress theme fully functional responsive prototypes based on Business Requirements using HTML/HTML5, CSS3, JavaScript and JQuery.
+                            <strong>Detail:</strong>
+                            <ul>
+                                <li>Develop back-end use jQuery, jQuery UI, AJAX, Backbone to create Page Builder and jQuery plugins.</li>
+                            </ul>
                         </li>
-                        <li><strong>Position:</strong> Team member</li>
-                    </ul>
-                </li>
-                <li><strong>2013 - 4/2014:</strong> Freelancer at Home
-                    <ul>
                         <li>
-                            <strong>Detail:</strong> Developed WordPress themes.
+                            <strong>Position:</strong> Team Member.
                         </li>
                     </ul>
                 </li>
@@ -108,7 +135,7 @@
         </section>
     </main>
     <footer>
-        <i class="ion-code"></i> by <a href="">Khoapq</a> - <a href="tel:xxxxxx">xxxxxx</a>
+        @2019 - by <a href="https://chinhtm07.github.io/">Chinhtm</a>
     </footer>
 </div>
 </body>
