--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <ul>
                 <li><strong>2019 - 2014:</strong> Hanoi University of Science and Technology.
                 </li>
-                <li><strong>2006 - 2009:</strong> THPT Kim Son B (Kim Son, Ninh Binh).
+                <li><strong>2006 - 2009:</strong> Kim Sơn B High school (Kim Son, Ninh Binh).
                 </li>
             </ul>
         </section>
