--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <main>
         <section class="summary">
             Front-end Developer with 4+ years of experience developing, and managing complex WordPress themes and internal frameworks. <br/>Specializes in HTML/CSS, Javascript, responsive design and improve UX.
+            <h3>Portfolio URL: <a href="https://kendytheme.net/">https://kendytheme.net/</a></h3>
         </section>
         <section class="skills">
             <h3 class="title">Key Skills</h3>
