--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section class="skills">
             <h3 class="title">Key Skills</h3>
             <ul>
-                <li>Expert in HTML/CSS, JavaScript, PHP/mySQL, LESS, UX and improve website speed.</li>
+                <li>Expert in HTML/CSS, JavaScript, PHP/MySQL, LESS, UX and improve website speed.</li>
                 <li>Expert in WordPress theme and plugin.</li>
                 <li>Knowledge Git, SVN, Photoshop, FileZilla, Bitbucket.</li>
             </ul>
