--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li>
                             <strong>Detail:</strong>
                             <ul>
-                                <li>Convert HTML from PSDf files.</li>
+                                <li>Convert HTML from PSD files.</li>
                                 <li>Developed WordPress theme fully functional responsive prototypes based on Business Requirements using HTML/HTML5, CSS3, LESS, jQuery.</li>
                                 <li>Support for customers (Fix bug, improve product, upgrade version).</li>
                                 <li>Manage Ubuntu VPS.</li>
